--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.10</artifactId>
             <version>2.2.3</version>
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.bahir</groupId>
