--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
     </properties>
 
     <dependencies>
+		<dependency>
+		    <groupId>org.apache.spark</groupId>
+		    <artifactId>spark-mllib_2.10</artifactId>
+		    <version>2.2.3</version>
+		    <scope>provided</scope>
+		</dependency>
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
